[package]
name = "striputary"
version = "0.1.1"
authors = [
    "Toni Peter <mail@tonipeter.de>",
]
edition = "2021"
resolver="2"

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "3.2", default-features = false, features = ["std", "derive", "cargo"] }
dbus = "0.9.7"
eframe = "0.19.0"
hound = "3.5.0"
log = "0.4.20"
regex = "1"
rodio = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
shellexpand = "2.1.2"
simplelog = "0.12.1"
subprocess = "0.2.9"
take_mut = "0.2.2"
xdg = "2.5.2"
